shorten the typing_skeletons width to avoid overflow

--- a/scss/components/_typingText.scss
+++ b/scss/components/_typingText.scss
@@ -44,7 +44,7 @@ $radiusDotTyping: 22px;
 .typing__skeleton-container {
   position: absolute;
   top: calc(50% + 20px);
-  width: 100%;
+  width: calc(100% - 48px);
   display: flex;
   flex-direction: column;
   gap: 16px;
